--- a/css/style.css
+++ b/css/style.css
@@ -273,33 +273,70 @@ border-top-width: 10px;
 
 /* css quotes */
 
-.container .quotes {
-    height: 500px;
-    text-align: center;
-    padding: 0 8%;
+.container .bagian2 {
+column-count:2;
 }
 
-.container .quotes h1 {
-    padding-top: 20px;
+
+
+.container .quotes{
+
+    height: 500px;
+    text-align: left;
+    width:50%;
+
+}
+.container .quotes h1{
+    padding-top:20px;
     margin-bottom: 20px;
 }
-
-.container .quotes p {
+.container .quotes p{
     margin-bottom: 20px;
     font-style: italic;
 }
 
-.container .quotes img {
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    margin-bottom: 20px;
-}
 
-.container .quotes h3 {
+
+.container .quotes h3{
     font-size: 30px;
+
 }
 
+.container .contact-form {
+height:500px;
+  padding-top:20px;
+    width:50%;
+float:right;
+}
+
+
+}
+.section-title h1{
+border-bottom: 1px solid;
+}
+
+
+input, textarea{
+
+  width:300px;
+  margin-top:10px;
+  margin-bottom:30px;
+  padding:10px;
+  font-size:12px;
+  border: 1px solid #dee7ec;
+
+}
+.contact-submit{
+cursor:pointer;
+transition: all 1s;
+
+}
+
+.contact-submit:hover{
+background-color:#63696F ;
+}
+
+/* end of bagian */
 footer h3 {
     text-align: center;
 }
